--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* body or html ? */
 body {
   box-sizing: border-box;
   font-family: "Montserrat", "Helvetica", "Arial", sans-serif;
@@ -17,7 +16,7 @@ body {
   margin: auto;
   color: #ababab;
 
-  background: url(/img/bg_mountain.jpg) no-repeat center center fixed;
+  background: url(./img/bg_mountain.jpg) no-repeat center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -44,7 +43,7 @@ body {
 }
 
 .footer .github {
-  background: url(/img/github_black.svg) no-repeat center/cover;
+  background: url(./img/github_black.svg) no-repeat center/cover;
 }
 
 .year {
@@ -83,19 +82,19 @@ body {
 }
 
 .phone {
-  background: url(/img/phone_grey.svg) no-repeat center/cover;
+  background: url(./img/phone_grey.svg) no-repeat center/cover;
 }
 
 .gmail {
-  background: url("/img/email_grey.svg") no-repeat center/cover;
+  background: url("./img/email_grey.svg") no-repeat center/cover;
 }
 
 .telegram {
-  background: url(/img/telegram_grey.svg) no-repeat center/cover;
+  background: url(./img/telegram_grey.svg) no-repeat center/cover;
 }
 
 .github {
-  background: url(/img/github_grey.svg) no-repeat center/cover;
+  background: url(./img/github_grey.svg) no-repeat center/cover;
 }
 
 /* PROFILE */
@@ -126,7 +125,7 @@ body {
   background: no-repeat center/cover;
   opacity: 0.6;
   border-radius: 200px;
-  box-shadow: 0 0 0 3px #232b2b, 0 0 13px #333; /* CLARIFY ! */
+  box-shadow: 0 0 0 3px #232b2b, 0 0 13px #333;
 }
 
 .profile-job {
@@ -203,7 +202,7 @@ body {
 }
 
 .foreign {
-  background: url(/img/map.png) no-repeat center/contain;
+  background: url(./img/map.png) no-repeat center/contain;
   background-color: rgba(0, 0, 0, 0.9);
 }
 
@@ -357,18 +356,18 @@ body {
 }
 
 .html {
-  background: url(/img/html.svg) no-repeat center/contain;
+  background: url(./img/html.svg) no-repeat center/contain;
 }
 .css {
-  background: url(/img/css.svg) no-repeat center/contain;
+  background: url(./img/css.svg) no-repeat center/contain;
 }
 
 .js {
-  background: url(/img/js.svg) no-repeat center/contain;
+  background: url(./img/js.svg) no-repeat center/contain;
 }
 
 .java {
-  background: url(/img/java.svg) no-repeat center/contain;
+  background: url(./img/java.svg) no-repeat center/contain;
 }
 
 /* PROJECTS */
