--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'Montserrat';
+  src: url('/assets/fonts/montserrat-v15-latin-regular.woff') format('woff');
+  src: url('/assets/fonts/montserrat-v15-latin-regular.woff2') format('woff2');
+}
+
 body {
   box-sizing: border-box;
   font-family: "Montserrat", "Helvetica", "Arial", sans-serif;
