--- a/css/style.css
+++ b/css/style.css
@@ -250,3 +250,84 @@ a {
     background: black;
   }
 }
+
+/* MAIN */
+.main {
+  width: 100%;
+  height: 100%;
+  background: url("/assets/img/jpg/bg-pc-mouse.jpg") no-repeat center/cover fixed;
+}
+
+/* PROFILE */
+.profile {
+  padding-top: 160px;
+}
+
+.profile__container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
+  column-gap: 5%;
+}
+
+.profile__img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.5);
+  margin-bottom: 5%;
+}
+
+.profile__img img {
+  object-fit: cover;
+  width: 200px;
+  height: 200px;
+}
+
+.profile__info {
+  background-color: rgba(74, 78, 77, 0.164);
+  display: flex;
+  justify-content: center;
+  flex-flow: column wrap;
+  flex: 1 1 60%;
+  border-radius: 20px;
+  text-align: center;
+}
+
+.profile__info .heading {
+  text-transform: uppercase;
+  font-size: 45px;
+  font-weight: lighter;
+  letter-spacing: 5px;
+  line-height: 60px;
+}
+
+.profile__info .heading::after {
+  border-bottom: 2px dashed #cecece;
+  display: block;
+  content: '';
+  height: 2px;
+  width: 100%;
+  transition: width .3s ease-in-out;
+}
+
+.profile__info .heading:hover::after {
+  width: 0%;
+}
+
+.profile__info .description {
+  padding: 10px 30px;
+}
+
+.profile__info .description__title {
+  font-size: 30px;
+  letter-spacing: 5px;
+  color: rgba(16, 17, 16, 0.849);
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.profile__info .description__text {
+  padding-bottom: 20px;
+}
