--- a/style.scss
+++ b/style.scss
@@ -242,12 +242,94 @@ a {
 }
 
 @keyframes pulse {
-from {
-  box-shadow: 0 0 0 0px rgba(255, 255, 255, 0);
-  background: rgba(255, 255, 255, 0);
+  from {
+    box-shadow: 0 0 0 0px rgba(255, 255, 255, 0);
+    background: rgba(255, 255, 255, 0);
+  }
+  to {
+    box-shadow: 0 0 0 1000px rgb(0, 0, 0);
+    background: rgb(0, 0, 0);
+  }
 }
-to {
-  box-shadow: 0 0 0 1000px rgb(0, 0, 0);
-  background: rgb(0, 0, 0);
+
+/* MAIN */
+.main {
+  width: 100%;
+  height: 100%;
+  background: url('/assets/img/jpg/bg-pc-mouse.jpg') no-repeat center/cover fixed;
 }
+
+/* PROFILE */
+.profile {
+  padding-top: 160px;
+
+  &__container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-flow: row wrap;
+    column-gap: 5%;
+  }
+    
+  &__img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin-bottom: 5%;
+
+    & img {
+      object-fit: cover;
+      width: 200px;
+      height: 200px;
+    }
+  }
+
+  &__info {
+    background-color: rgba(74, 78, 77, 0.164);
+    display: flex;
+    justify-content: center;
+    flex-flow: column wrap;
+    flex: 1 1 60%;
+    border-radius: 20px;
+    text-align: center;
+
+    .heading {
+      text-transform: uppercase;
+      font-size: 45px;
+      font-weight: lighter;
+      letter-spacing: 5px;
+      line-height: 60px;
+
+      &::after {
+        border-bottom: 2px dashed #cecece;
+        display: block;
+        content: '';
+        height: 2px;
+        width: 100%;
+        transition: width .3s ease-in-out;
+      }
+
+      &:hover::after {
+        width: 0%;
+      }
+    }
+
+    & .description {
+      padding: 10px 30px;
+
+      &__title {
+        font-size: 30px;
+        letter-spacing: 5px;
+        color: rgba(16, 17, 16, 0.849);
+        font-weight: 500;
+        margin-bottom: 10px;
+      }
+
+      &__text {
+        padding-bottom: 20px;
+      }
+    }
+
+  }
 }
