--- a/style.scss
+++ b/style.scss
@@ -333,3 +333,72 @@ a {
 
   }
 }
+
+/* PROJECTS */
+.projects__container {
+  background-color: rgba(5, 5, 5, 0.349);
+  border-radius: 20px;
+}
+
+.slider {
+  max-width: 90%;
+  /* Положение элемента устанавливается относительно его исходной позиции: */
+  position: relative;
+  margin: auto;
+  height: 200px;
+
+  /* Картинка масштабируется по отношению к родительскому элементу: */
+  & .item img {
+    /* Элемент меняет размер так, чтобы заполнить блок и сохранить пропорции: */
+    object-fit: cover;
+    width: 100%;
+    height: 200px;
+  }
+  
+  & .item {
+    animation: fade 1.5s linear;
+  }
+
+  & .arrow {
+    cursor: pointer;
+    position: absolute;
+    top: 35%;
+    width: auto;
+    font-size: 24px;
+    padding: 16px;
+    transition: .5s ease;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.arrow {
+  cursor: pointer;
+  position: absolute;
+  top: 35%;
+  width: auto;
+  font-size: 24px;
+  padding: 16px;
+  transition: .5s ease;
+
+  &__prev {
+    left: 5%;
+  }
+
+  &__next {
+    right: 5%;
+  }
+
+  &__prev:hover,
+  &__next:hover {
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+  }
+}
